--- a/src/assets/componentsCSS/button.css
+++ b/src/assets/componentsCSS/button.css
@@ -15,5 +15,5 @@
 }
 
 .btn-gray-hover{
-    @apply hover:bg-gray-200 border border-slate-50;
+    @apply hover:bg-gray-200 border hover:border-none border-slate-50;
 }
