--- a/src/assets/componentsCSS/checkbox.css
+++ b/src/assets/componentsCSS/checkbox.css
@@ -2,3 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+.checkbox1 {
+    @apply p-1 w-5 h-5 bg-fill-light border-fill-light rounded text-light-purple focus:ring-light-purple focus:ring-1;
+}
