--- a/src/assets/componentsCSS/checkbox.css
+++ b/src/assets/componentsCSS/checkbox.css
@@ -5,3 +5,7 @@
 .checkbox1 {
     @apply p-1 w-5 h-5 bg-fill-light border-fill-light rounded text-light-purple focus:ring-light-purple focus:ring-1;
 }
+
+.radio1 {
+    @apply form-radio p-1 w-5 h-5 bg-fill-light border-fill-light rounded-full text-light-purple focus:ring-light-purple focus:ring-1;
+}
