--- a/src/assets/componentsCSS/input.css
+++ b/src/assets/componentsCSS/input.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 .text1 {
+    @apply py-2 px-4 text-gray-700 bg-fill-light caret-pink-500 rounded;
+}
+
+.text2 {
     @apply py-2 px-4 text-gray-700 bg-fill-light rounded;
 }
