add login with firebase Auth

--- a/src/assets/componentsCSS/button.css
+++ b/src/assets/componentsCSS/button.css
@@ -17,3 +17,6 @@
 .btn-gray-hover{
     @apply hover:bg-gray-200 border hover:border-none border-slate-50;
 }
+.btn-login{
+    @apply btn-md rounded-[5px] font-light py-1 md:col-span-2 normal-case hover:bg-mid-light-blue hover:text-white;
+}
